k8s/uat/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: uat
  labels:
    environment: uat
    app: product-order-service
